# code2sql

./: .gitignore  README.md  convert_data_format.py  debug_reward.py  demo_three_stage_result.json  demo_validator.py  generate_const_chunk_scenario.py  main.py  output.txt  output1.txt  output_ivc.txt  output_new.txt  pyproject.toml  rerun_analysis.py  reverse_sql_generator.py  reverse_sql_scenarios_summary.md  run_comparative_evaluation.sh  run_dataset_viewer.py  run_fingerprint_evaluation.sh  run_keyword_judge.py  run_qwen_api.sh  run_sglang_curl.py  run_workflow.py  saves  sglang_environment.yml  sglang_parameters_explanation.md  sglang_start_command.sh  sql_cleaning_demo.py  test_complex_orm_sql.py  test_complex_sql_structures.py  test_comprehensive_reverse_sql.py  test_control_flow_validation.py  test_fastapi_app.py  test_llm_client.py  test_merged_prompts.py  test_multi_sql_detection.py  test_quick_reverse_sql.py  test_redundant_validation.py  test_sglang_curl.py  test_sglang_curl.sh  (+13 more)
config/: __init__.py  llm_config.py  prompts.py  rerun_config.yaml  validation_prompts.py
cursor-chat-7/: 2024-12-19_multi_branch_transaction修复总结.md  2024-12-19_multi_branch_transaction问题分析.md  2024-12-19_代码清理问题修复总结.md  2024-12-19_动态SQL变体数量设计.md  2024-12-19_反向SQL生成器code_meta_data修复总结.md  2024-12-19_并行和错误修复总结.md  2024-12-19_数据生成架构分析.md  2024-12-19_解析问题修复总结.md  2024-12-19_重试次数配置优化.md  2025-01-16_数据丢失问题修复.md  2025-07-03_Code2SQL项目架构重构.md  2025-07-03_实时写入分析结果.md  2025-07-03_批量重新分析功能开发.md  2025-07-03_数据清洗workflow搭建.md  2025-07-03_数据清洗workflow架构重新设计.md  2025-07-03_数据读取器与关键词提取器实现.md  (+147 more)
(+283 files in other folders)
